tests/paczka1/small_fuzzy/78446454.err
Error in line 1: W5Rtm S734 11,4
Error in line 3: W5Rtm A795 24,9
Error in line 5: W5Rtm S734 70,7
Error in line 16: W5Rtm S819 11,21
